Fixed a z-index issue in the dashboard calendar.

--- a/javascript/fullcalendar/fullcalendar.css
+++ b/javascript/fullcalendar/fullcalendar.css
@@ -106,7 +106,6 @@ html .fc,
 	
 .fc-view {
 	width: 100%; /* needed for view switching (when view is absolute) */
-	overflow: hidden;
 	}
 	
 	
